--- a/very new/css/bootstrap.css
+++ b/very new/css/bootstrap.css
@@ -1120,8 +1120,17 @@ img {
 .carousel-inner > .item > img,
 .carousel-inner > .item > a > img {
   display: block;
-  max-width: 100%;
-  height: auto;
+  width: 207px;
+  height: 180px;
+}
+.img-responsive-p,
+.thumbnail > img,
+.thumbnail a > img,
+.carousel-inner > .item > img,
+.carousel-inner > .item > a > img {
+  display: block;
+  width: 345px;
+  height: 290px;
 }
 .img-rounded {
   border-radius: 6px;
