--- a/very new/css/style.css
+++ b/very new/css/style.css
@@ -3,9 +3,14 @@
 	width:330px;
 	height:170px;
 	position: absolute; 
-	margin-top: 20px;
+	margin-top:30px;
 	}
-
+#container {
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
+}
 h1,h2,h3,h4,h5,h6{
 	padding:0 0;
 	margin:0 0;
@@ -48,6 +53,7 @@ body{
 }
 .logo {
   margin: 0 auto;
+  margin-top:300px;
   width: 28%;
 	position: relative;
 }
