--- a/very new/css/style.css
+++ b/very new/css/style.css
@@ -1395,6 +1395,8 @@ position: absolute;
 	color:black;
 	font-size: 20px;
 	text-align: center;
+	margin: 0 0 0 0;
+	padding: 0 0 0 0;
 }
 
 .total{
